@@ -15,7 +15,7 @@ ext {
     workDir = "./work"
 }
 
-def platform = platform() {
+def platform = platform {
     localProperties {
         '# place your custom properties into this file instead of modifying the project.properties'
         '# all properties in this file have higher priority and will overwrite the platform/project.properties settings.'
@@ -23,10 +23,7 @@ def platform = platform() {
         property '#mykey', '#myvalue'
         property '#hac.webroot', '/hac'
 
-        '# using higher memory settings (4G heap and 512 permgen) to prevent out of memory issues on tcserver'
-        property 'tomcat.generaloptions', '-Xmx4096M -XX:-UseLoopPredicate -XX:MaxPermSize=512M -XX:+HeapDumpOnOutOfMemoryError -ea -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dorg.tanukisoftware.wrapper.WrapperManager.mbean=true -Djava.endorsed.dirs="%CATALINA_HOME%/lib/endorsed" -Dcatalina.base=%CATALINA_BASE% -Dcatalina.home=%CATALINA_HOME% -Dfile.encoding=UTF-8 -Dlog4j.configuration=log4j_init_tomcat.properties -Djava.util.logging.config.file=jdk_logging.properties -Djava.io.tmpdir="${HYBRIS_TEMP_DIR}"'
-
-        property 'standalone.javaoptions', '-Xmx2040M -XX:MaxPermSize=512M -XX:+HeapDumpOnOutOfMemoryError -ea -XX:-UseLoopPredicate'
+        property 'googleApiKey', ''
 
         property 'website.electronics.http', 'http://electronics.local:9001/yacceleratorstorefront'
         property 'website.electronics.https', 'https://electronics.local:9002/yacceleratorstorefront'
@@ -34,13 +31,16 @@ def platform = platform() {
         property 'website.apparel-de.https', 'https://apparel-de.local:9002/yacceleratorstorefront'
         property 'website.apparel-uk.http', 'http://apparel-uk.local:9001/yacceleratorstorefront'
         property 'website.apparel-uk.https', 'https://apparel-uk.local:9002/yacceleratorstorefront'
-        property 'apiregistryservices.events.exporting', 'false'
+        property 'multicountrysampledataaddon.import.active', 'false'
         property 'ansi.colors', 'true'
         property 'testclasses.addonname', 'yacceleratorstorefront'
     }
 
+    afterSetup {
+        ensureAdminPasswordSet()
+    }
+
     extensions {
-        scanPathWithAutoLoad '${HYBRIS_BIN_DIR}/y-ext/ext-worldpayoms'
         extensionNames 'ordermanagementaddon',
                 'orderselfserviceaddon',
                 'ordermanagementwebservices',
@@ -53,6 +53,7 @@ def platform = platform() {
                 'adaptivesearchbackoffice',
                 'adaptivesearchsamplesaddon',
                 'commerceservicesbackoffice',
+                'solrfacetsearchbackoffice',
 
                 'yacceleratorbackoffice',
                 'yacceleratorinitialdata',
@@ -60,7 +61,6 @@ def platform = platform() {
                 'yacceleratorstorefront',
                 'yaddon',
                 'ycommercewebservices',
-                'cmsoccaddon',
 
                 'apparelstore',
                 'electronicsstore',
@@ -90,11 +90,34 @@ def platform = platform() {
                 'consignmenttrackingoccaddon',
 
                 'outboundservices',
+		        'outboundsync',
                 'odata2webservices',
                 'odata2webservicesfeaturetests',
+                'integrationbackoffice',
+                'integrationmonitoringbackoffice',
+                'outboundsyncbackoffice',
 
                 'kymaintegrationbackoffice',
-                'kymaintegrationsampledata',
+
+                'xyformsbackoffice',
+                'xyformsstorefrontcommons',
+                'xyformssamples',
+                'xyformsweb',
+                'orbeonweb',
+
+                'entitlementfacades',
+                'entitlementbackoffice',
+
+                'cmswebservices',
+                'smarteditwebservices',
+                'cmssmarteditwebservices',
+                'permissionswebservices',
+                'previewwebservices',
+                'smarteditaddon',
+                'cmssmartedit',
+                'cmsbackoffice',
+                'cmsoccaddon',
+                'multicountrysampledataaddon',
 
                 'worldpayaddon',
                 'worldpayaddonbackoffice',
@@ -102,14 +125,17 @@ def platform = platform() {
                 'worldpaynotifications',
                 'worldpaysampledataaddon',
                 'worldpayoccaddon',
-                'worldpayhac'
+                'worldpayhac',
+                'worldpayoms'
     }
 
     addons {
         forStoreFronts('yacceleratorstorefront') {
             names 'worldpayaddon', 'worldpaysampledataaddon','commerceorgsamplesaddon', 'customerticketingaddon', 'promotionenginesamplesaddon', 'adaptivesearchsamplesaddon',
-                    'pcmbackofficesamplesaddon', 'ordermanagementaddon', 'orderselfserviceaddon', 'consignmenttrackingaddon', 'assistedservicestorefront'
+                    'pcmbackofficesamplesaddon', 'ordermanagementaddon', 'orderselfserviceaddon', 'consignmenttrackingaddon', 'assistedservicestorefront',
+                    'xyformssamples', 'xyformsstorefrontcommons', 'smarteditaddon', 'multicountrysampledataaddon'
             template 'yacceleratorstorefront'
+
         }
 
         forStoreFronts('ycommercewebservices') {
@@ -142,3 +168,16 @@ task start {
         platform.start()
     }
 }
+
+task startInBackground {
+    doLast {
+        pl.startInBackground()
+    }
+}
+
+task stopInBackground {
+    doLast {
+        pl.stopInBackground()
+    }
+}
+
